push updates to docs

--- a/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -19,7 +19,12 @@
     - title: River
       url: /components/River
 
-- title: Base components
+- title: Forms
+  children:
+    - title: FormControl
+      url: /components/FormControl
+
+- title: Typography
   children:
     - title: Heading
       url: /components/Heading
