add checkbox to docs nav

--- a/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -21,6 +21,8 @@
 
 - title: Forms
   children:
+    - title: Checkbox
+      url: /components/Checkbox
     - title: FormControl
       url: /components/FormControl
     - title: Select
