--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "@changesets/cli": "^2.21.0",
     "@github/prettier-config": "^0.0.4",
     "@primer/octicons-react": "^17.3.0",
-    "@primer/primitives": "^7.8.3",
+    "@primer/primitives": "^0.0.0-20220908080958",
     "@storybook/addon-a11y": "^6.5.9",
     "@storybook/jest": "^0.0.10",
     "@storybook/test-runner": "^0.5.0",
