--- a/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -19,7 +19,18 @@
     - title: River
       url: /components/River
 
-- title: Base components
+- title: Forms
+  children:
+    - title: Checkbox
+      url: /components/Checkbox
+    - title: FormControl
+      url: /components/FormControl
+    - title: Select
+      url: /components/Select
+    - title: TextInput
+      url: /components/TextInput
+
+- title: Typography
   children:
     - title: Heading
       url: /components/Heading
