add Testimonial and Stack components

--- a/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -18,6 +18,8 @@
       url: /components/Hero
     - title: River
       url: /components/River
+    - title: Testimonial
+      url: /components/Testimonial
 
 - title: Forms
   children:
