--- a/.github/workflows/deploy_docs_preview.yml
+++ b/.github/workflows/deploy_docs_preview.yml
@@ -1,4 +1,4 @@
-name: Deploy preview
+name: Deploy
 
 on:
   pull_request:
@@ -13,8 +13,9 @@ permissions:
 jobs:
   deploy:
     if: ${{ github.repository == 'primer/brand' }}
-    name: Build and deploy
-    uses: primer/.github/.github/workflows/deploy_preview.yml@next
+    name: Preview
+    # SHA for security hardening. Points at last verified HEAD of main branch.
+    uses: primer/.github/.github/workflows/deploy_preview.yml@0cec9b9914f358846163f2428663b58da41028c9
     with:
       node_version: 16
       install: npm ci --legacy-peer-deps && cd docs && npm ci --legacy-peer-deps && cd ..
