add Stack to docs

--- a/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -32,6 +32,11 @@
     - title: TextInput
       url: /components/TextInput
 
+- title: Layout
+  children:
+    - title: Stack
+      url: /components/Stack
+
 - title: Typography
   children:
     - title: Heading
