Add Testimonial and Stack components (#82)

--- a/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -18,6 +18,8 @@
       url: /components/Hero
     - title: River
       url: /components/River
+    - title: Testimonial
+      url: /components/Testimonial
 
 - title: Forms
   children:
@@ -29,6 +31,11 @@
       url: /components/Select
     - title: TextInput
       url: /components/TextInput
+
+- title: Layout
+  children:
+    - title: Stack
+      url: /components/Stack
 
 - title: Typography
   children:
