Added SubdomainNavBar component (#81)

--- a/docs/src/@primer/gatsby-theme-doctocat/nav.yml
+++ b/docs/src/@primer/gatsby-theme-doctocat/nav.yml
@@ -18,6 +18,8 @@
       url: /components/Hero
     - title: River
       url: /components/River
+    - title: SubdomainNavBar
+      url: /components/SubdomainNavBar
     - title: Testimonial
       url: /components/Testimonial
 
