--- a/package.json
+++ b/package.json
@@ -28,79 +28,23 @@
     "npm": ">=8.0.0",
     "node": ">=16.0.0"
   },
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "files": [
-    "lib",
-    "fonts"
-  ],
   "scripts": {
-    "build": "npm run clean --workspaces --if-present && npm run build --workspaces --if-present",
-    "build:css-types": "tcm -p 'src/**/*.module.css' .",
-    "build:types": "tsc --project tsconfig.build.json",
-    "build:storybook": "scripts/build-storybook",
-    "build:storybook:preview": "scripts/build-storybook preview",
-    "build:docs": "cd apps/docs && scripts/build-docs",
-    "build:docs:preview": "cd apps/docs && scripts/build-docs preview",
-    "build:tokens": "npm run build --workspace=packages/design-tokens",
-    "build:react": "npm run build --workspace=packages/react",
+    "build": "npm run clean --workspaces --if-present && npm run build --workspaces --if-present && npm run build:docs",
+    "build:docs": "cd apps/docs && npm run build",
     "check": "npm run check --workspaces --if-present",
-    "clean": "rm -rf lib",
+    "clean": "npm run clean --workspaces --if-present",
+    "clean:node_modules": "npm exec --workspaces -- npx rimraf node_modules && npx rimraf node_modules",
     "format": "npm run format --workspaces --if-present",
-    "format:fix": "prettier --write '**/*.{js,jsx,ts,tsx,md,mdx,css,json}'",
     "lint": "npm run lint --workspaces --if-present",
     "release": "npm run build && changeset publish",
-    "start": "npm run build && npm run start:storybook & npm run start:docs",
+    "start": "npm run build && npm run start --workspaces --if-present",
     "start:storybook": "npm run start --workspace=apps/storybook",
     "start:docs": "npm run start --workspace=apps/docs",
-    "start:css-types": "tcm -w -p 'src/**/*.css' .",
     "test": "npm run test --workspaces --if-present",
-    "test:visual": "npx build-storybook && scripts/playwright/run-visual-tests",
-    "test:visual:generate": "ts-node scripts/playwright/playwright.generate-tests.ts",
-    "test:visual:update-snapshots": "npx build-storybook && scripts/playwright/update-visual-snapshots"
-  },
-  "peerDependencies": {
-    "react": ">=17 <= 18",
-    "react-dom": ">=17 <= 18"
+    "test:visual": "npm run test:visual --workspace=packages/e2e"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.3",
-    "@changesets/cli": "^2.21.0",
-    "@github/prettier-config": "^0.0.4",
-    "@playwright/test": "^1.24.0",
-    "@reach/auto-id": "^0.17.0",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
-    "autoprefixer": "^9.8.8",
-    "axe-playwright": "^1.1.11",
-    "color2k": "^2.0.0",
-    "cross-env": "7.0.2",
-    "css-loader": "^6.7.1",
-    "eslint": "^8.12.0",
-    "eslint-import-resolver-typescript": "^2.7.0",
-    "eslint-plugin-github": "^4.3.6",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-mdx": "^1.17.0",
-    "eslint-plugin-primer-react": "^0.7.4",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "eslint-plugin-storybook": "^0.5.12",
-    "fast-glob": "^3.2.11",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.5.1",
-    "jest-axe": "^6.0.0",
-    "mini-css-extract-plugin": "^2.6.0",
-    "postcss": "^8.4.7",
-    "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.4.2",
-    "prettier": "^2.5.1",
-    "style-dictionary": "^3.7.0",
-    "style-loader": "^3.3.1",
-    "ts-jest": "^27.1.3",
-    "ts-loader": "^9.2.7",
-    "ts-node": "^10.9.1",
-    "typed-css-modules": "^0.7.0",
-    "typescript": "^4.6.3",
-    "typescript-plugin-css-modules": "^3.4.0"
+    "@changesets/cli": "^2.21.0"
   }
 }
