--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -3,9 +3,10 @@
   "repository": "primer/brand",
   "version": "0.5.1",
   "scripts": {
+    "clean": "rm -rf public && rm -rf .cache",
     "start": "rm -rf .cache && gatsby develop",
-    "build": "cross-env NODE_ENV=production gatsby build --prefix-paths",
-    "build:preview": "cross-env NODE_ENV=production gatsby build"
+    "build": "npm run clean && cross-env NODE_ENV=production gatsby build --prefix-paths",
+    "build:preview": "npm run clean && cross-env NODE_ENV=production gatsby build"
   },
   "engines": {
     "node": ">=16",
