--- a/.github/workflows/deploy_docs.yml
+++ b/.github/workflows/deploy_docs.yml
@@ -18,6 +18,6 @@ jobs:
     uses: primer/.github/.github/workflows/deploy.yml@0cec9b9914f358846163f2428663b58da41028c9
     with:
       node_version: 16
-      install: npm ci --legacy-peer-deps && cd docs && npm ci --legacy-peer-deps && cd ..
-      build: npm run build && npm run build:docs
-      output_dir: docs/public/
+      install: npm ci --legacy-peer-deps && cd apps/docs && npm ci --legacy-peer-deps && cd ..
+      build: npm run build && npm run build:docs && npm run build:storybook
+      output_dir: apps/docs/public/
