--- a/.github/workflows/deploy_docs_preview.yml
+++ b/.github/workflows/deploy_docs_preview.yml
@@ -19,7 +19,7 @@ jobs:
     with:
       node_version: 16
       install: npm ci --legacy-peer-deps && cd apps/docs && npm ci --legacy-peer-deps && cd ..
-      build: npm run build && npm run build:docs:preview
+      build: npm run build && npm run build:docs:preview && npm run build:storybook:preview
       output_dir: apps/docs/public/
 
   deploy-storybook:
