--- a/.github/workflows/ui_test_accessibility.yml
+++ b/.github/workflows/ui_test_accessibility.yml
@@ -29,10 +29,10 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps && cd docs && npm ci --legacy-peer-deps
+        run: npm ci --legacy-peer-deps && cd apps/docs && npm ci --legacy-peer-deps
 
       - name: Build
         run: npm run build
 
       - name: Serve Storybook and run tests
-        run: npx start-server-and-test 'start:storybook' 6006 'npx test-storybook'
+        run: npx start-server-and-test 'npm run start --workspace=apps/storybook' 6006 'npx test-storybook --config-dir apps/storybook/.storybook'
