--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -34,25 +34,27 @@
     "clean": "rm -rf out",
     "build:prod": "npm run clean && scripts/build-storybook",
     "build:preview": "npm run clean && scripts/build-storybook preview",
-    "start": "start-storybook -p 6006"
+    "start": "start-storybook -p 6006",
+    "test": "npm run test-storybook --maxWorkers=2"
   },
   "peerDependencies": {
     "react": ">=17 <= 18",
     "react-dom": ">=17 <= 18"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "^6.5.9",
-    "@storybook/addon-actions": "^6.5.6",
-    "@storybook/addon-essentials": "^6.5.6",
+    "@storybook/addon-a11y": "^6.5.12",
+    "@storybook/addon-actions": "^6.5.12",
+    "@storybook/addon-essentials": "^6.5.12",
     "@storybook/addon-interactions": "^6.5.12",
-    "@storybook/addon-links": "^6.5.6",
+    "@storybook/addon-links": "^6.5.12",
     "@storybook/addon-storysource": "^6.5.12",
-    "@storybook/builder-webpack5": "^6.5.6",
+    "@storybook/builder-webpack5": "^6.5.12",
     "@storybook/jest": "^0.0.10",
-    "@storybook/manager-webpack5": "^6.5.6",
-    "@storybook/react": "^6.5.6",
+    "@storybook/manager-webpack5": "^6.5.12",
+    "@storybook/react": "^6.5.12",
     "@storybook/test-runner": "^0.5.0",
     "@storybook/testing-library": "^0.0.11",
+    "axe-playwright": "^1.1.11",
     "css-loader": "^6.7.1",
     "identity-obj-proxy": "^3.0.0",
     "postcss": "^8.4.7",
