--- a/.github/workflows/ui_test_primitives_diff.yml
+++ b/.github/workflows/ui_test_primitives_diff.yml
@@ -32,20 +32,20 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps && cd docs && npm ci --legacy-peer-deps
+        run: npm ci --legacy-peer-deps && cd apps/docs && npm ci --legacy-peer-deps
 
       - name: Install dependencies (reference)
-        run: pushd temp-main; npm ci --legacy-peer-deps && cd docs && npm ci --legacy-peer-deps; popd
+        run: pushd temp-main; npm ci --legacy-peer-deps && cd apps/docs && npm ci --legacy-peer-deps; popd
 
       - name: Build
-        run: npm run build
+        run: npm run build --workspace=packages/design-tokens
 
       - name: Build (reference)
-        run: pushd temp-main; npm run build; popd
+        run: pushd temp-main; npm run build --workspace=packages/design-tokens; popd
 
       - name: Export diff
         run: |
-          diff -r -y --width=150 -B -I '*' -I 'Generated' --suppress-common-lines temp-main/lib/design-tokens/css lib/design-tokens/css  | tail -n +2 > diff.txt
+          diff -r -y --width=150 -B -I '*' -I 'Generated' --suppress-common-lines temp-main/packages/design-tokens/lib/design-tokens/css packages/design-tokens/lib/design-tokens/css  | tail -n +2 > diff.txt
           npx ts-node ./packages/design-tokens/scripts/ci-check-diff.ts
 
       - name: Read raw diff
