--- a/.github/workflows/visual_test_storybook.yml
+++ b/.github/workflows/visual_test_storybook.yml
@@ -31,17 +31,17 @@ jobs:
           npx playwright install-deps chromium
 
       - name: Install dependencies
-        run: npm ci --legacy-peer-deps && cd docs && npm ci --legacy-peer-deps
+        run: npm ci --legacy-peer-deps && cd apps/docs && npm ci --legacy-peer-deps
 
       - name: Build assets
         run: npm run build
 
       - name: Build Storybook
-        run: npx build-storybook
+        run: cd apps/storybook && npx build-storybook
 
       - name: Run visual tests
         id: playwright-step
-        run: npx start-server-and-test 'npx http-server ./storybook-static -p 6006' 6006 'npx playwright test'
+        run: npx start-server-and-test 'npx http-server ./apps/storybook/storybook-static -p 6006' 6006 'npx playwright test'
         continue-on-error: true
 
       - name: Upload error screenshots
