--- a/.github/workflows/integration_test_remix.yml
+++ b/.github/workflows/integration_test_remix.yml
@@ -32,13 +32,13 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Installing dependencies
-        run: npm ci --legacy-peer-deps && cd docs && npm ci --legacy-peer-deps
+        run: npm ci --legacy-peer-deps && cd apps/docs && npm ci --legacy-peer-deps
 
       - name: Build
         run: npm run build
 
       - name: Bundling output
-        run: npm pack
+        run: cd ./packages/react && npm pack
 
       - name: Configuring Remix.run
         run: yes | npx create-remix --template remix-run/indie-stack ${{env.TEST_FOLDER}} --typescript
@@ -50,23 +50,23 @@ jobs:
       - name: Installing local build
         run: |
           cd ${{env.TEST_FOLDER}} 
-          cp ../primer-react-brand-${{ steps.package-version.outputs.current-version}}.tgz ./
+          cp ../packages/react/primer-react-brand-${{ steps.package-version.outputs.current-version}}.tgz ./
           npm install primer-react-brand-${{ steps.package-version.outputs.current-version}}.tgz
 
       - name: Prefer ESM imports
         run: |
-          mv integration-tests/fixtures/index.esm.ts integration-tests/fixtures/index.ts
-          rm integration-tests/fixtures/index.cjs.ts
+          mv ./packages/e2e/integration-tests/fixtures/index.esm.ts ./packages/e2e/integration-tests/fixtures/index.ts
+          rm ./packages/e2e/integration-tests/fixtures/index.cjs.ts
 
       - name: Copying required files
         run: |
-          cp integration-tests/remix.run/index.tsx ./${{env.TEST_FOLDER}}/app/routes
-          cp integration-tests/remix.run/root.tsx ./${{env.TEST_FOLDER}}/app
-          cp -r integration-tests/fixtures ./${{env.TEST_FOLDER}}/app
+          cp ./packages/e2e/integration-tests/remix.run/index.tsx ./${{env.TEST_FOLDER}}/app/routes
+          cp ./packages/e2e/integration-tests/remix.run/root.tsx ./${{env.TEST_FOLDER}}/app
+          cp -r ./packages/e2e/integration-tests/fixtures ./${{env.TEST_FOLDER}}/app
           cp cypress.config.js ./${{env.TEST_FOLDER}} 
           mkdir ${{env.TEST_FOLDER}}/integration-tests
-          cp -r integration-tests/fixtures ./${{env.TEST_FOLDER}}/integration-tests
-          cp -r integration-tests/tests ./${{env.TEST_FOLDER}}/integration-tests
+          cp -r ./packages/e2e/integration-tests/fixtures ./${{env.TEST_FOLDER}}/integration-tests
+          cp -r ./packages/e2e/integration-tests/tests ./${{env.TEST_FOLDER}}/integration-tests
 
       - name: Testing compile-time build
         run: cd ${{env.TEST_FOLDER}}  && npm run build
