--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "build": "npm run clean --workspaces --if-present && npm run build --workspaces --if-present && npm run build:docs && npm run build:storybook",
     "build:docs": "cd apps/docs && npm run build",
     "build:docs:preview": "cd apps/docs && npm run build:preview",
+    "build:lib": "npm run build --workspace=packages/design-tokens --workspace=packages/react",
     "build:storybook": "npm run build:preview --workspace=apps/storybook",
     "build:storybook:preview": "npm run build:preview --workspace=apps/storybook",
     "check": "npm run check --workspaces --if-present",
