rename primitives package and add base config package

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,8 +1,8 @@
 {
-  "$schema": "https://unpkg.com/@changesets/config@1.7.0/schema.json",
+  "$schema": "https://unpkg.com/@changesets/config@2.0.0/schema.json",
   "changelog": ["@changesets/changelog-github", {"repo": "primer/brand"}],
   "commit": false,
-  "fixed": [["@primer/react-brand", "@primer/primitives-brand"]],
+  "fixed": [["@primer/react-brand", "@primer/brand-*"]],
   "linked": [],
   "access": "public",
   "baseBranch": "main",
