--- a/.github/workflows/release_canary.yml
+++ b/.github/workflows/release_canary.yml
@@ -37,8 +37,9 @@ jobs:
         env:
           NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
 
-      - name: Publish canary release
+      - name: Publish canary release for @primer/react-brand
         run: |
+          cd packages/react
           echo "$( jq '.version = "0.0.0"' package.json )" > package.json
           echo -e "---\n$( jq .name package.json ): patch\n---\n\nFake entry to force publishing" > .changeset/force-snapshot-release.md
           yarn changeset version --snapshot
