--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "storybook",
+  "name": "@primer/brand-storybook",
   "private": true,
   "description": "Primer Brand is a GitHub's design system for creating React-based marketing websites and digital experiences.",
   "version": "0.5.1",
