--- a/.github/workflows/release_canary.yml
+++ b/.github/workflows/release_canary.yml
@@ -38,7 +38,9 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN_SHARED }}
 
       - name: Publish canary release
-        run: npm run prepare:canary
+        run: |
+          yarn prepare:canary
+          yarn changeset publish --tag canary
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -46,13 +48,15 @@ jobs:
         uses: actions/github-script@v4.0.2
         with:
           script: |
-            const package = require(`${process.env.GITHUB_WORKSPACE}/package.json`)
+            const react = require(`${process.env.GITHUB_WORKSPACE}/packages/react/package.json`)
+            const primitives = require(`${process.env.GITHUB_WORKSPACE}/packages/design-tokens/package.json`)
+            const package = require(`${process.env.GITHUB_WORKSPACE}/packages/repo-configs/package.json`)
             github.repos.createCommitStatus({
               owner: context.repo.owner,
               repo: context.repo.repo,
               sha: context.sha,
               state: 'success',
-              context: `Published ${package.name}`,
+              context: `Published ${react.name} and ${primitives}`,
               description: package.version,
               target_url: `https://unpkg.com/${package.name}@${package.version}/`
             })
