--- a/.github/workflows/release_canary.yml
+++ b/.github/workflows/release_canary.yml
@@ -49,14 +49,23 @@ jobs:
         with:
           script: |
             const react = require(`${process.env.GITHUB_WORKSPACE}/packages/react/package.json`)
-            const primitives = require(`${process.env.GITHUB_WORKSPACE}/packages/design-tokens/package.json`)
-            const package = require(`${process.env.GITHUB_WORKSPACE}/packages/repo-configs/package.json`)
             github.repos.createCommitStatus({
               owner: context.repo.owner,
               repo: context.repo.repo,
               sha: context.sha,
               state: 'success',
-              context: `Published ${react.name} and ${primitives}`,
-              description: package.version,
-              target_url: `https://unpkg.com/${package.name}@${package.version}/`
+              context: `Published ${react.name}`,
+              description: react.version,
+              target_url: `https://unpkg.com/${react.name}@${react.version}/`
+            })
+
+            const primitives = require(`${process.env.GITHUB_WORKSPACE}/packages/design-tokens/package.json`)
+            github.repos.createCommitStatus({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              sha: context.sha,
+              state: 'success',
+              context: `Published ${primitives.name}`,
+              description: primitives.version,
+              target_url: `https://unpkg.com/${primitives.name}@${primitives.version}/`
             })
