--- a/.github/workflows/release_candidate.yml
+++ b/.github/workflows/release_candidate.yml
@@ -9,7 +9,62 @@ jobs:
   release-candidate:
     if: ${{ github.repository == 'primer/brand' }}
     name: Candidate
-    uses: primer/.github/.github/workflows/release_candidate.yml@main
-    secrets:
-      gh_token: ${{ secrets.GITHUB_TOKEN }}
-      npm_token: ${{ secrets.NPM_AUTH_TOKEN_SHARED }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
+          fetch-depth: 0
+
+      - name: Set up Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build
+        run: npm run build:lib
+
+      - name: Create .npmrc
+        run: |
+          cat << EOF > "$HOME/.npmrc"
+            //registry.npmjs.org/:_authToken=$NPM_TOKEN
+          EOF
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN_SHARED }}
+
+      - name: Publish release candidate
+        run: |
+          npm exec --workspaces -- ../../packages/repo-configs/scripts/prepare-release-candidate
+          yarn changeset publish --tag next
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Output canary version
+        uses: actions/github-script@v4.0.2
+        with:
+          script: |
+            const react = require(`${process.env.GITHUB_WORKSPACE}/packages/react/package.json`)
+            github.repos.createCommitStatus({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              sha: context.sha,
+              state: 'success',
+              context: `Published ${react.name}`,
+              description: react.version,
+              target_url: `https://unpkg.com/${react.name}@${react.version}/`
+            })
+
+            const primitives = require(`${process.env.GITHUB_WORKSPACE}/packages/design-tokens/package.json`)
+            github.repos.createCommitStatus({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              sha: context.sha,
+              state: 'success',
+              context: `Published ${primitives.name}`,
+              description: primitives.version,
+              target_url: `https://unpkg.com/${primitives.name}@${primitives.version}/`
+            })
