--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -5,7 +5,7 @@
   "version": "0.5.1",
   "scripts": {
     "clean": "rm -rf public && rm -rf .cache",
-    "start": "rm -rf .cache && gatsby develop",
+    "start": "rm -rf .cache && gatsby develop --open",
     "build": "npm run clean && cross-env NODE_ENV=production gatsby build --prefix-paths",
     "build:preview": "npm run clean && cross-env NODE_ENV=production gatsby build"
   },
