only build lib in workflows

--- a/.github/workflows/integration_test_cra.yml
+++ b/.github/workflows/integration_test_cra.yml
@@ -61,7 +61,7 @@ jobs:
           npx cypress version --component node
 
       - name: Build
-        run: npm run build
+        run: npm run build:lib
 
       - name: Bundling output
         run: cd ./packages/react && npm pack
