--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "node": ">=16.0.0"
   },
   "scripts": {
-    "build": "npm run clean --workspaces --if-present && npm run build --workspaces --if-present && npm run build:docs && npm run build:storybook",
+    "build": "npm run clean --workspaces --if-present && npm run build:lib && npm run build:docs && npm run build:storybook",
     "build:docs": "cd apps/docs && npm run build",
     "build:docs:preview": "cd apps/docs && npm run build:preview",
     "build:lib": "npm run build --workspace=packages/design-tokens --workspace=packages/react",
