--- a/packages/design-tokens/package.json
+++ b/packages/design-tokens/package.json
@@ -37,34 +37,8 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@github/prettier-config": "^0.0.4",
     "@primer/primitives": "^7.9.0",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
     "color2k": "^2.0.0",
-    "eslint": "^8.12.0",
-    "eslint-import-resolver-typescript": "^2.7.0",
-    "eslint-plugin-github": "^4.3.6",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-mdx": "^1.17.0",
-    "eslint-plugin-primer-react": "^0.7.4",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "eslint-plugin-storybook": "^0.5.12",
-    "jest": "^27.5.1",
-    "jest-axe": "^6.0.0",
-    "mini-css-extract-plugin": "^2.6.0",
-    "postcss": "^8.4.7",
-    "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.4.2",
-    "prettier": "^2.5.1",
-    "style-dictionary": "^3.7.0",
-    "style-loader": "^3.3.1",
-    "ts-jest": "^27.1.3",
-    "ts-loader": "^9.2.7",
-    "ts-node": "^10.9.1",
-    "typed-css-modules": "^0.7.0",
-    "typescript": "^4.6.3",
-    "typescript-plugin-css-modules": "^3.4.0"
+    "style-dictionary": "^3.7.0"
   }
 }
