--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -40,44 +40,6 @@
     "test:visual:update-snapshots": "scripts/playwright/update-visual-snapshots"
   },
   "devDependencies": {
-    "@changesets/changelog-github": "^0.4.3",
-    "@changesets/cli": "^2.21.0",
-    "@github/prettier-config": "^0.0.4",
-    "@playwright/test": "^1.24.0",
-    "@primer/primitives": "^7.9.0",
-    "@reach/auto-id": "^0.17.0",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
-    "autoprefixer": "^9.8.8",
-    "axe-playwright": "^1.1.11",
-    "color2k": "^2.0.0",
-    "cross-env": "7.0.2",
-    "css-loader": "^6.7.1",
-    "eslint": "^8.12.0",
-    "eslint-import-resolver-typescript": "^2.7.0",
-    "eslint-plugin-github": "^4.3.6",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-mdx": "^1.17.0",
-    "eslint-plugin-primer-react": "^0.7.4",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "eslint-plugin-storybook": "^0.5.12",
-    "fast-glob": "^3.2.11",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.5.1",
-    "jest-axe": "^6.0.0",
-    "mini-css-extract-plugin": "^2.6.0",
-    "postcss": "^8.4.7",
-    "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.4.2",
-    "prettier": "^2.5.1",
-    "style-dictionary": "^3.7.0",
-    "style-loader": "^3.3.1",
-    "ts-jest": "^27.1.3",
-    "ts-loader": "^9.2.7",
-    "ts-node": "^10.9.1",
-    "typed-css-modules": "^0.7.0",
-    "typescript": "^4.6.3",
-    "typescript-plugin-css-modules": "^3.4.0"
+    "@playwright/test": "^1.24.0"
   }
 }
